ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: innovate-mart-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:us-east-1:710271919629:certificate/b98cddae-06ae-41c4-be06-c0d37a049654"
spec:
  ingressClassName: "alb"  # <-- Add this line
  rules:
    - host: "muhammed-innovate-mart.click"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui
                port:
                  number: 80
